WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134703
Don't leak _WKRemoteObjectRegistry in WKBrowsingContextController
https://bugs.webkit.org/show_bug.cgi?id=134703
Summary
Don't leak _WKRemoteObjectRegistry in WKBrowsingContextController
Tim Horton
Reported
2014-07-07 16:57:24 PDT
Another missing adoption.
Attachments
patch
(1.54 KB, patch)
2014-07-07 16:58 PDT
,
Tim Horton
simon.fraser
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2
(533.14 KB, application/zip)
2014-07-07 18:04 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-07-07 16:58:12 PDT
Created
attachment 234526
[details]
patch
Tim Horton
Comment 2
2014-07-07 16:58:38 PDT
Still building to confirm this one but it seems straightforward.
Build Bot
Comment 3
2014-07-07 18:04:40 PDT
Comment on
attachment 234526
[details]
patch
Attachment 234526
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/6053866067984384
New failing tests: media/media-fragments/TC0001.html
Build Bot
Comment 4
2014-07-07 18:04:44 PDT
Created
attachment 234529
[details]
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-11 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Tim Horton
Comment 5
2014-07-07 18:57:17 PDT
http://trac.webkit.org/changeset/170870
Radar WebKit Bug Importer
Comment 6
2014-07-07 18:57:46 PDT
<
rdar://problem/17584664
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug