Don't leak _WKRemoteObjectRegistry in WKBrowsingContextController https://bugs.webkit.org/show_bug.cgi?id=134703

Reviewed by Simon Fraser.

* UIProcess/API/Cocoa/WKBrowsingContextController.mm:
(-[WKBrowsingContextController _remoteObjectRegistry]):
Adoption is important!!


Canonical link: https://commits.webkit.org/152665@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170870 268f45cc-cd09-0410-ab3c-d52691b4dbfc